
  [ Evan Dandrea ]
  * Run X with -nolisten tcp (LP: #462394).
  * Make sure we never try to install onto the live filesystem.
  * Only print the filenames being blacklisted if in debug mode.
  * Provide human readable sizes in the partitions-too-small warning
    (LP: #298974).
  * Mark the "Installation Complete" window as always on top
    (LP: #462178).

  [ Colin Watson ]
  * Add a debian/rules target to run pychecker. I've fixed several warnings,
    but there are still several left so this is not yet enabled by default.
  * Fix debconf frontend:
    - Start oem-config on stopping rc, as well as when starting display
      managers.
    - Add some missing imports (ubiquity.frontend.base.Controller,
      ubiquity.plugin.Plugin, ubiquity.i18n, signal,
      ubiquity.components.install).
    - If there's a containing debconf frontend, talk to it rather than using
      debconf-communicator.
    - Set a controller in the language plugin.
    - Use spaces rather than ${!TAB} in localechooser when using the debconf
      frontend, since debconf doesn't support the latter yet.
    - Don't handle user-setup preseeding for the debconf frontend.
    - Remove unused progress_position handling.
    - Fix exception names in ubi-network and ubi-tasks.
  * Require Python 2.5, so we can now use hashlib rather than md5 and avoid
    a slew of warnings.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 28 Oct 2009 10:57:17 +0000

ubiquity (2.0.7) karmic-updates; urgency=low

  * Fix incorrect arguments to get_cache_pkg (LP: #462462).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 28 Oct 2009 10:09:27 +0000

ubiquity (2.0.6) karmic; urgency=low

  * Automatic update of included source packages: partman-basicmethods
    43ubuntu2, partman-target 64ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 27 Oct 2009 15:20:11 +0000

ubiquity (2.0.5) karmic; urgency=low

  [ Evan Dandrea ]
  * Do not fail if linux-generic-pae is not in the package cache.
    Thanks Colin Watson (LP: #461377).